lightbox/lightbox.css
:root {
  --lb-overlay-opacity: 0.8;
  --lb-overlay-bg: black;
  --lb-border-radius: 1px;
  --lb-image-border-width: 2px;
  --lb-image-border-color: white;
  --lb-container-bg: white;
  --lb-text-color: #ccc;
  --lb-caption-link-color: #4ae;
  --lb-number-color: #999999;
  --lb-nav-transition-speed: 0.6s;
  --lb-close-transition-speed: 0.2s;
}

body.lb-disable-scrolling {
  overflow: hidden;
}

.lightboxOverlay {
  position: fixed;
  inset: 0;
  z-index: 9999;
  background-color: var(--lb-overlay-bg);
  opacity: var(--lb-overlay-opacity);
  display: none;
}

.lightbox {
  position: fixed;
  left: 0;
  width: 100%;
  z-index: 10000;
  text-align: center;
  line-height: 0;
  font-weight: normal;
  outline: none;
  object-fit: cover;
  justify-content: center;
}

.lightbox .lb-image {
  display: block;
  height: auto;
  max-width: inherit;
  max-height: none;
  border-radius: var(--lb-border-radius);

  /* Image border */
  border: var(--lb-image-border-width) solid var(--lb-image-border-color);
}

.lightbox a img {
  border: none;
}

.lb-outerContainer {
  position: relative;
  width: 250px;
  height: 250px;
  margin: 0 auto;
  border-radius: 4px;

  /* Background color behind image.
     This is visible during transitions. */
  background-color: var(--lb-container-bg);
}

.lb-outerContainer:after {
  content: "";
  display: table;
  clear: both;
}

.lb-loader {
  position: absolute;
  top: 43%;
  left: 0;
  height: 25%;
  width: 100%;
  text-align: center;
  line-height: 0;
}

.lb-cancel {
  display: block;
  width: 32px;
  height: 32px;
  margin: 0 auto;
  background: url(img/loading.gif) no-repeat;
}

.lb-nav {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 10;
}

.lb-container > .nav {
  left: 0;
}

.lb-nav a {
  outline: none;
  background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==');
}

.lb-prev, .lb-next {
  height: 100%;
  cursor: pointer;
  display: block;
}

.lb-nav a.lb-prev {
  width: 34%;
  left: 0;
  float: left;
  background: url(img/prev.png) left 48% no-repeat;
  opacity: 0;
  transition: opacity var(--lb-nav-transition-speed);
}

.lb-nav a.lb-prev:hover {
  opacity: 1;
}

.lb-nav a.lb-next {
  width: 64%;
  right: 0;
  float: right;
  background: url(img/next.png) right 48% no-repeat;
  opacity: 0;
  transition: opacity var(--lb-nav-transition-speed);
}

.lb-nav a.lb-next:hover {
  opacity: 1;
}

.lb-dataContainer {
  margin: 0 auto;
  padding-top: 5px;
  width: 100%;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.lb-dataContainer:after {
  content: "";
  display: table;
  clear: both;
}

.lb-data {
  padding: 0 4px;
  color: var(--lb-text-color);
}

.lb-data .lb-details {
  width: 85%;
  float: left;
  text-align: left;
  line-height: 1.1em;
}

.lb-data .lb-caption {
  font-size: 13px;
  font-weight: bold;
  line-height: 1em;
}

.lb-data .lb-caption a {
  color: var(--lb-caption-link-color);
}

.lb-data .lb-number {
  display: block;
  clear: left;
  padding-bottom: 1em;
  font-size: 12px;
  color: var(--lb-number-color);
}

.lb-data .lb-close {
  display: block;
  float: right;
  width: 30px;
  height: 30px;
  background: url(img/close.png) top right no-repeat;
  text-align: right;
  outline: none;
  opacity: 0.7;
  transition: opacity var(--lb-close-transition-speed);
}

.lb-data .lb-close:hover {
  cursor: pointer;
  opacity: 1;
}

